# ChangeLog for x11-themes/gnome-icon-theme-extras
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.8 2012/05/05 04:10:06 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  gnome-icon-theme-extras-2.30.1.ebuild, gnome-icon-theme-extras-3.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gnome-icon-theme-extras-3.0.0.ebuild:
  x86 stable wrt bug #385699

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  gnome-icon-theme-extras-3.0.0.ebuild:
  amd64 stable wrt #385699

*gnome-icon-theme-extras-3.0.0 (06 Apr 2011)

  06 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -gnome-icon-theme-extras-2.90.7.ebuild,
  +gnome-icon-theme-extras-3.0.0.ebuild:
  Bump to 3.0.0, remove old

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
  gnome-icon-theme-extras-2.30.1.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  gnome-icon-theme-extras-2.30.1.ebuild:
  Stable on amd64 wrt bug #353436

*gnome-icon-theme-extras-2.90.7 (21 Feb 2011)

  21 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-icon-theme-extras-2.90.7.ebuild:
  Bump to 2.90.7: five new icons

*gnome-icon-theme-extras-2.30.1 (22 Jan 2011)

  22 Jan 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-icon-theme-extras-2.30.1.ebuild, +metadata.xml:
  Add new package with icon theme extras
