@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnome-icon-theme-extras
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.8 2012/05/05 04:10:06 jdhore Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.9 2012/05/14 04:47:53 tetromino Exp $
+
+*gnome-icon-theme-extras-3.4.0 (14 May 2012)
+
+  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +gnome-icon-theme-extras-3.4.0.ebuild:
+  Version bump, adds colorhug colorimeter icon.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org>
   gnome-icon-theme-extras-2.30.1.ebuild, gnome-icon-theme-extras-3.0.0.ebuild:
